# azure-sphere-rtcore-da7212

./: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  main.c  music.h
codec/: fsl_common.h
codec/da7212/: fsl_dialog7212.c  fsl_dialog7212.h
codec/port/: fsl_codec_i2c.h
codec/port/mt3620/: fsl_codec_i2c.c
